# client

./: .gitignore  Action Queue Pattern.md  CHANGELOG.md  CLASSIFICATION.md  CLAUDE.md  Cargo.toml  DATABASE_DIAGRAM.md  FEATURES.md  IMAP_SYNC.md  IMAP_SYNC_ISSUES.md  MOBILE_SETUP.md  README.md  RELEASE_NOTES.txt  SYNC-ENGINE-REQUIREMENTS.md  SYNC-ENGINE-SPEC.md  Write Mode Spec.md  eddie-interactive.html  entitlements.plist  index.html  package-lock.json  package.json  skills.md  sync-engine.md  vite.config.ts
.claude/: settings.local.json
.claude/skills/: release.md
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml
crates/email_classifier/: Cargo.toml
crates/email_classifier/src/: rules.rs
scripts/: download-ort.sh
src/: App.css  App.tsx  main.tsx  routeTree.gen.ts  router.tsx
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: encryption.rs  error.rs  lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/imap/: connection.rs  envelopes.rs  folders.rs  historical.rs  mod.rs  sent_scan.rs
src-tauri/src/adapters/ollama/: mod.rs
src-tauri/src/adapters/smtp/: mod.rs  send.rs
src-tauri/src/adapters/sqlite/: accounts.rs  conversations.rs  entities.rs  folder_sync.rs  messages.rs  mod.rs  onboarding_tasks.rs  pool.rs  schema.rs
src-tauri/src/adapters/sqlite/sync/: accounts.rs  action_queue.rs  conversations.rs  db.rs  db_schema.rs  entities.rs  folder_sync.rs  line_groups.rs  messages.rs  mod.rs  onboarding_tasks.rs  settings.rs  skill_classify.rs  skills.rs
src-tauri/src/autodiscovery/: autoconfig.rs  dns.rs  mod.rs  probe.rs  providers.rs
src-tauri/src/backend/: carddav.rs  mod.rs
src-tauri/src/commands/: account.rs  accounts.rs  actions.rs  app.rs  classify.rs  config.rs  contacts.rs  conversations.rs  discovery.rs  entities.rs  envelopes.rs  flags.rs  folders.rs  messages.rs  mod.rs  ollama.rs  settings.rs  skills.rs  sync.rs
src-tauri/src/config/: mod.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/engine/: mod.rs  worker.rs
src-tauri/src/engine/helpers/: message_builder.rs  message_classification.rs  message_distillation.rs  status_emit.rs
src-tauri/src/engine/tasks/: connection_history.rs  historical_fetch.rs  incremental_sync.rs  mod.rs  trust_network.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/services/: account_service.rs  helpers.rs  logger.rs  message_service.rs  mod.rs  ollama.rs
src-tauri/src/services/sync/: worker.rs
src-tauri/src/services/sync/helpers/: email_normalization.rs  entity_extraction.rs  message_builder.rs  message_classification.rs  message_distillation.rs  mod.rs  model_download.rs  status_emit.rs
src-tauri/src/services/sync/tasks/: action_replay.rs  connection_history.rs  flag_resync.rs  historical_fetch.rs  incremental_sync.rs  mod.rs  skill_classify.rs  trust_network.rs
src-tauri/src/state/: mod.rs  oauth_state.rs  sync_manager.rs
src-tauri/src/sync/: action_queue.rs  capability.rs  classifier.rs  conversation.rs  db.rs  engine.rs  idle.rs  mod.rs  ollama_classifier.rs
src-tauri/src/types/: contact.rs  conversation.rs  error.rs  mod.rs  responses.rs
src/components/: AccountConfigModal.tsx  AccountSelector.tsx  AccountSetupWizard.tsx  AttachmentList.tsx  Avatar.tsx  ChatList.tsx  ChatMessage.tsx  ChatMessageAsEmail.tsx  ChatMessages.tsx  ComposeModal.tsx  ContactsList.tsx  ConversationView.tsx  EmojiPicker.tsx  EnvelopeList.tsx  FolderList.tsx  GravatarModal.tsx  MessageFullView.tsx  SidebarHeader.tsx  index.ts
src/features/: index.ts
src/features/accounts/: index.ts
src/features/accounts/components/: AccountConfigModal.tsx  AccountSetupWizard.tsx  SettingsDialog.tsx  SidebarHeader.tsx  index.ts
src/features/accounts/context/: AccountContext.tsx  index.ts
src/features/accounts/hooks/: useAccounts.ts
src/features/contacts/: index.ts
src/features/contacts/components/: ContactsList.tsx
src/features/contacts/hooks/: index.ts  useContacts.ts
src/features/conversations/: index.ts  utils.ts
src/hooks/: useContacts.ts  useConversations.ts  useEmail.ts  useSync.ts
src/lib/: api.ts  emojiData.ts  utils.ts
src/routes/: __root.tsx  _app.tsx  login.tsx  onboarding.tsx
src/routes/_app/: _tabs.tsx  cluster.$id.tsx  compose.tsx  conversation.$id.tsx  settings.tsx  skills.hub.tsx  skills.studio.tsx
src/routes/_app/_tabs/: circles.tsx  (+4 more)
src/shared/: index.ts
src/shared/components/: Avatar.tsx  EmptyState.tsx  ErrorFallback.tsx  Icons.tsx  LinkifiedText.tsx  LoadingSpinner.tsx  LogoPill.tsx  MessageDetail.tsx  OnboardingScreen.tsx  PartitionedAvatar.tsx  ReadOnlyToggle.tsx  ResizeHandle.tsx  index.ts
src/shared/context/: AuthContext.tsx  ChatFilterContext.tsx  DataContext.tsx  SearchContext.tsx  ThemeContext.tsx  index.ts
src/shared/hooks/: index.ts  useResizableSidebar.ts
src/shared/lib/: gravatar.ts  helpers.ts  index.ts  utils.ts
src/skills/: SkillStudio.tsx  SkillsHub.tsx  index.ts  skills.css  types.ts
src/tauri/: commands.ts  events.ts  index.ts  types.ts
src/types/: index.ts
tauri-app/: README.md  pnpm-lock.yaml
tauri-app/src/: App.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tauri-app/src/components/: AccountConfigModal.tsx  ComposeModal.tsx  MessageView.tsx  index.ts
tauri-app/src/hooks/: useEmail.ts
tauri-app/src/lib/: api.ts
tauri-app/src/types/: index.ts
tauri-plugin-llm/: Cargo.toml  build.rs  package.json  rollup.config.mjs  tsconfig.json
tauri-plugin-llm/android/: build.gradle.kts
tauri-plugin-llm/android/src/main/java/com/plugin/llm/: GenerateArgs.kt  LlmPlugin.kt
tauri-plugin-llm/guest-js/: index.ts
tauri-plugin-llm/ios/: Package.swift
tauri-plugin-llm/ios/Sources/: LlmPlugin.swift
tauri-plugin-llm/macos/: AppleLlmBridge.swift
tauri-plugin-llm/permissions/: default.toml
tauri-plugin-llm/src/: commands.rs  config.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  ollama.rs
tauri-plugin-llm/windows/: windows_llm_bridge.cpp
(+20 files in other folders)
