[package]
name = "eddie-chat"
version = "0.1.0"
description = "eddie.chat - Email Client"
authors = ["you"]
edition = "2021"

[lib]
name = "eddie_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IMAP protocol (async)
async-imap = "0.11"
async-native-tls = "0.5"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
imap-proto = "0.16"

# SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Email parsing
mailparse = "0.15"
quoted_printable = "0.5"
html2text = "0.14"

# Config and utilities
toml = "0.8"
once_cell = "1.16"
thiserror = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

# Database and sync engine
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
uuid = { version = "1.10", features = ["v4"] }

# Email autodiscovery and OAuth2
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
quick-xml = { version = "0.36", features = ["serialize"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"

# Device-specific encryption for password storage (replaces keyring)
aes-gcm = "0.10"
argon2 = "0.5"

# TLS support for probing
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Tauri plugins for OAuth
tauri-plugin-deep-link = "2"

# Desktop-only features (tray icon not supported on mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# machine-uid has iOS compilation issues, use only on desktop
machine-uid = "0.5"

[features]
default = []
# Mobile feature flag for conditional compilation
mobile = []
