[package]
name = "eddie-chat"
version = "0.2.7"
description = "eddie.chat - Email Client"
authors = ["you"]
edition = "2021"

[lib]
name = "eddie_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

thiserror = "1"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

async-imap = "0.11.2"
mailparse = "0.15"
quoted_printable = "0.5"
webpki-roots = "1"

rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
imap-proto = "0.16"

base64 = "0.22"

html2text = "0.14"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
quick-xml = { version = "0.36", features = ["serialize"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
sentry = { version = "0.46.2", features = ["tracing", "logs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Desktop-only features (tray icon not supported on mobile)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }

[features]
default = []
# Mobile feature flag for conditional compilation
mobile = []
