[package]
name = "tauri-plugin-llm"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-llm"

[lib]
name = "tauri_plugin_llm"

[dependencies]
tauri         = { version = "2", default-features = false }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "2"
log           = "0.4"
reqwest       = { version = "0.12", features = ["json"] }
tokio         = { version = "1", features = ["sync"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
